# ChangeLog for dev-java/icedtea-web
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/icedtea-web/ChangeLog,v 1.42 2014/07/01 05:36:48 ago Exp $

  01 Jul 2014; Agostino Sarubbo <ago@gentoo.org> icedtea-web-1.4.2.ebuild:
  Stable for x86, wrt bug #501472

  01 Jul 2014; Agostino Sarubbo <ago@gentoo.org> icedtea-web-1.4.2.ebuild:
  Stable for amd64, wrt bug #501472

*icedtea-web-1.4.2-r1 (27 Jun 2014)

  27 Jun 2014; Vlastimil Babka <caster@gentoo.org> icedtea-web-1.4.2.ebuild,
  +icedtea-web-1.4.2-r1.ebuild:
  Revbump the current icedtea-web-1.4.2 to 1.4.2-r1 without change. Then remove
  icedtea7 USE flag and associated dependency from -r0, so it can be
  stabilized. Security bug #501472.

*icedtea-web-1.4.2 (01 Jun 2014)

  01 Jun 2014; Vlastimil Babka <caster@gentoo.org> +icedtea-web-1.4.2.ebuild:
  Version bump, security bug #501472.

  30 Dec 2013; Tom Wijsman <TomWij@gentoo.org> -icedtea-web-1.3.1-r7.ebuild,
  -icedtea-web-1.3.1.ebuild, metadata.xml:
  Dropped vulnerable 1.3.1* (and unused local USE-descriptions gtk2 and gtk3)
  for security bug #483198.

  11 Nov 2013; Vlastimil Babka <caster@gentoo.org> icedtea-web-1.4.1.ebuild,
  metadata.xml:
  Introduce icedtea7 USE flag, as it turns out that icedtea-web built with
  icedtea-6 is missing a class necessary for icedtea-7. When built with
  icedtea-7, it works with both versions.

  09 Nov 2013; Vlastimil Babka <caster@gentoo.org> icedtea-web-1.4.1.ebuild:
  Correct VMHANDLE to make automatic nsplugin activation work.

*icedtea-web-1.4.1 (25 Oct 2013)

  25 Oct 2013; Ralph Sennhauser <sera@gentoo.org> +icedtea-web-1.4.1.ebuild,
  +files/0001-Fix-parallel-install.-BGO-440906.patch, +files/README.gentoo:
  Version bump.
  Adds ability to switch JVM.
  Adds README.gentoo
  Fix parallel install. Bug #440906

  19 Sep 2013; Tom Wijsman <TomWij@gentoo.org> metadata.xml:
  gnu_andrew never wanted to be a proxied maintainer for this package and has