@@ -1,6 +1,6 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/icedtea-web/icedtea-web-1.3.2.ebuild,v 1.1 2013/07/23 21:08:15 caster Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/icedtea-web/icedtea-web-1.3.2.ebuild,v 1.2 2014/11/01 18:01:59 caster Exp $
 # Build written by Andrew John Hughes (ahughes@redhat.com)
 
 EAPI="4"
@@ -19,6 +19,7 @@ IUSE="build doc javascript +nsplugin test"
 
 COMMON_DEP="
 	dev-java/icedtea:${SLOT}
+	!>=dev-java/icedtea-6.1.13.5-r1:6
 	nsplugin? (
 		>=dev-libs/glib-2.16
 	)"
